# radia-cooling

./: .gitignore  README.md  paper.md
app/: package-lock.json  package.json
ml_pipeline/: README.md  pyproject.toml
ml_pipeline/configs/: multilayer_space.yaml
ml_pipeline/scripts/: generate_dataset.py  propose_inverse_design.py  rank_candidates.py  rank_proposal_pool.py  train_baseline.py  train_conditional_diffusion.py  train_conditional_vae.py  train_inverse_design.py  train_rank_calibrator.py  train_spectral_surrogate.py  train_tandem.py  train_torch_forward.py  verify_candidates.py
ml_pipeline/src/rcml/: config.py  proposals.py
ml_pipeline/src/rcml/cli/: generate_dataset.py  propose_inverse_design.py  rank_candidates.py  rank_proposal_pool.py  train_baseline.py  train_conditional_diffusion.py  train_conditional_vae.py  train_inverse_design.py  train_rank_calibrator.py  train_spectral_surrogate.py  train_tandem.py  train_torch_forward.py  verify_candidates.py
ml_pipeline/src/rcml/data/: codec.py  dataset.py  schema.py  splits.py
ml_pipeline/src/rcml/eval/: rank.py  verify.py
ml_pipeline/src/rcml/models/: baselines.py  conditional_diffusion.py  conditional_vae.py  generative_core.py  inverse.py  rank_calibration.py  surrogate.py  tandem.py  torch_forward.py
ml_pipeline/src/rcml/physics/: __init__.py  mock_backend.py  wptherml_runner.py
ml_pipeline/src/rcml/sampling/: design_space.py
research/: 01_ML_Models_Explained.md  02_How_Paper_Uses_Each_Model.md  03_Generative_AI_Proposals.md  04_Future_Needs_vs_Existing_Advances.md  README.md  (+7 more)
(+40 files in other folders)
